[iOS] Tiny hack to fix WebKitTestRunner view visibility https://bugs.webkit.org/show_bug.cgi?id=133833

Reviewed by Tim Horton.

PageClientImplIOS in WebKitTestRunner has a null m_webView, so isViewInWindow
was returning false, which confused things.

Fix by falling back to a check on the content view if the m_webView is nil.

* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::isViewVisible):
(WebKit::PageClientImpl::isViewInWindow):

Canonical link: https://commits.webkit.org/151802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169924 268f45cc-cd09-0410-ab3c-d52691b4dbfc